# compiler

./: CMakeLists.txt  LexicalAnalyzer.cpp  LexicalAnalyzer.h  README.md  Token.h  main.cpp
LexicalAnalyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
Syntax Analyzer/: SyntaxAnalyzer.cpp
SyntaxAnalyzer/: SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  SyntaxTreeNode.h
Translator/: Translator.cpp  Translator.h
Writerside/: readme.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: lexicalAnalyzer.md  starter-topic.md
